Fix toast message truncation

--- a/assets/style.css
+++ b/assets/style.css
@@ -179,10 +179,12 @@ body.dark .form-check-input:checked {
   align-items: flex-end;
   max-height: 50vh;
   overflow: hidden;
+  width: 280px;
 }
 .msg-toast {
   animation: msgIn 0.3s forwards;
   cursor: pointer;
+  width: 100%;
 }
 .msg-toast.note--out {
   animation: msgOut 0.3s forwards;
